[package]
name = "wl"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
image = "0.25.1"
memmap2 = "0.9.4"
tempfile = "3.10.1"
wayland-client = "0.31.2"
wayland-protocols = { version = "0.31.2", features = ["client"] }
wayland-protocols-wlr = { version = "0.2.0", features = ["client", "wayland-client"] }
